--- a/vue/package.json
+++ b/vue/package.json
@@ -25,6 +25,7 @@
     "vue": "^3.2.6",
     "vue-material-design-icons": "^5.0.0",
     "vue-router": "^4.0.3",
+    "vue-select-3": "^1.0.1",
     "vuelidate": "^0.7.7",
     "vuex": "^4.0.0"
   },
